--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,16 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
+    <dimen name="normal_horizontal_margin">12dp</dimen>
+    <dimen name="normal_vertical_margin">10dp</dimen>
+    <dimen name="normal_inner_space">6dp</dimen>
+
+    <dimen name="textedit_height">40dp</dimen>
+    <dimen name="textedit_large_note_height">200dp</dimen>
+    <dimen name="textedit_cursor_margin">8dp</dimen>
+    <dimen name="textedit_cursor_vertical_margin">12dp</dimen>
+
+    <dimen name="button_layout_height">40dp</dimen>
+    <dimen name="button_little_width">60dp</dimen>
+
 </resources>
