--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="transparent">#00000000</color>
     <color name="color_item_line_blue">#FF046d9e</color>
     <color name="color_back_bg_normal">#FF32BEFF</color>
     <color name="color_back_bg_pressed">#5532BEFF</color>
@@ -7,4 +8,9 @@
     <color name="color_save_bg_pressed">#5521e14e</color>
     <color name="color_del_bg_normal">#FF97a49a</color>
     <color name="color_del_bg_pressed">#5597a49a</color>
+    <color name="color_main_time">#000000</color>
+    <color name="color_first_level">#af4343</color>
+    <color name="color_second_level">#3a973e</color>
+    <color name="color_third_level">#a14585</color>
+    <color name="color_fourth_level">#8f9392</color>
 </resources>
