[feature]Add enter to addtask and fix some bugs.
[how]默认只留从最外面的list
position删除的机制,去掉AddTask里面的删除按钮...因为不好控制id.

--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -31,6 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
+            android:singleLine="true"
             android:textSize="@dimen/main_list_title_size"
             />
         <TextView
@@ -39,6 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_alignStart="@id/title"
             android:layout_alignParentBottom="true"
+            android:singleLine="true"
             android:textSize="@dimen/main_list_comment_size"
             />
 
@@ -50,6 +52,7 @@
             android:layout_alignParentStart="true"
             android:textSize="@dimen/main_list_center_title_size"
             android:visibility="gone"
+            android:singleLine="true"
             />
 
         <TextView
